# somabrain

./: .build_ports.env  .dockerignore  .env.dev-prod  .env.example  .env.local  .env.local.bak  .gitattributes  .gitignore  .gitmessage  .pre-commit-config.yaml  .ruff.toml  100_iteration_learning_results.json  =7  AGENT.md  ARCHITECTURE.md  ARCHITECTURE_AUDIT_STANDALONE_2026-02-03.md  AUDIT_REPORT.md  AUDIT_REPORT_2026-02-03.md  AUDIT_REPORT_2026-06-12.md  BENCHMARK_PERFORMANCE_REPORT.md  CHANGELOG.md  CODEBASE_AUDIT_REPORT.md  CODEBASE_EXPERT_SUMMARY.md  CODE_OF_CONDUCT.md  COLLABORATION.md  COMMIT_GUIDELINES.md  COMPLETE_SYSTEM_ANALYSIS.md  COMPLIANCE_ROADMAP.md  CONTRIBUTING.md  DEEP_DIVE_ANALYSIS.md  DEEP_DIVE_REFACTORING_GUIDE.md  DEFINITIVE_MODE_ARCHITECTURE.md  DEVELOPMENT_GUIDE.md  Docker_Canonical.yml  Docker_Canonical.yml.bak  Dockerfile  EXECUTIVE_SUMMARY.md  FINAL_VERIFICATION_REPORT.md  FULL_CONTEXT_FOR_NEXT_AGENT.md  GAP_ANALYSIS_AND_ROADMAP.md  (+97 more)
rust_core/: Cargo.toml  README.md  pyproject.toml
rust_core/src/: adaptation.rs  bhdc.rs  lib.rs  mathcore.rs  neuro.rs  prediction.rs
somabrain/: .gitignore  CONTRIBUTING.md  Dockerfile  MATHEMATICAL_vs_BIOLOGICAL_ANALYSIS.md  PROGRESS.md  README.md  REALISTIC_NEXT_STEP.md  REAL_BRAIN_ROADMAP.md  SECURITY.md  TRANSCENDENT_ROADMAP.md  __init__.py  adaptive_neuromodulators.py  admin.py  agent_memory.py  amygdala.py  app.py  arc_cache.py  asgi.py  attention.py  audit.py  auth.py  basal_ganglia.py  batch.py  cli.py  cognitum_core.py  complete_revolution_demonstration.py  config.example.yaml  config.py  consolidation.py  context_builder.py  context_hrr.py  datetime_utils.py  demo_foundation.py  docker-compose.yml  embeddings.py  entropy_guard.py  events.py  exec_controller.py  feedback.py  focus_state.py  (+79 more)
somabrain/_legacy/: app_fastapi_deprecated.py
somabrain/aaas/: admin.py  apps.py  auth.py  billing.py  granular.py  models.py  webhooks.py
somabrain/adaptive/: __init__.py  core.py  integration.py
somabrain/api/: auth.py  config_api.py  context_route.py  context_state.py  context_validation.py  memory_api.py  rag.py  standalone_auth.py  v1.py
somabrain/audit/: producer.py
somabrain/autonomous/: __init__.py  config.py  coordinator.py  healing.py  learning.py  monitor.py
somabrain/bootstrap/: __init__.py  beautiful_logging.py  core_singletons.py  logging.py  opa.py  runtime_init.py  singletons.py
somabrain/brain/: __init__.py  adapters.py  complexity.py  fnom.py  focus_state.py  neuromodulators.py  unified_core.py
somabrain/brain_settings/: __init__.py  models.py  modes.py
somabrain/calibration/: __init__.py  calibration_metrics.py  temperature_scaling.py
somabrain/cli/: canary.py
somabrain/cog/: producer.py
somabrain/cognitive/: __init__.py  collaboration.py  emotion.py  planning.py  thread_model.py  thread_router.py  working_memory_buffer.py
somabrain/common/: __init__.py  events.py  infra.py  kafka.py
somabrain/config/: __init__.py  asgi.py  central_mode.py  runtime.py  urls.py  wsgi.py
somabrain/constitution/: __init__.py  storage.py
somabrain/context/: __init__.py  builder.py  factory.py  memory_shim.py  planner.py  tenant_overrides.py
somabrain/controls/: __init__.py  audit.py  cognitive_middleware.py  degradation.py  django_middleware.py  drift_monitor.py  memory_client.py  metrics.py  middleware.py  opa_middleware.py  policy.py  provenance.py  reality_monitor.py  security_middleware.py
somabrain/core/: __init__.py  container.py  events.py  exceptions.py  infrastructure_defs.py  logging_setup.py  ports.py  rust_bridge.py  types.py  validation.py
somabrain/db/: outbox.py  outbox_clean.py  outbox_journal.py  outbox_replay.py
somabrain/dev_memory_service/: app.py
somabrain/docs/: ARCHITECTURE_DECISIONS.md  Architecture.md  ExecutiveController.md  INDEX_PROFILES.md  MATHEMATICAL_ROADMAP.md  MUVERA_FDE.md  PERFORMANCE_ANALYSIS.md  PROGRESS_SNAPSHOT.md  PROJECT_SNAPSHOT.md  PROJECT_SNAPSHOT_UPDATED.md  REAL_ROADMAP.md  RESCUE_PROMPT.txt  REVOLUTIONARY_MASTER_PLAN.md  ROADMAP_SPRINTS.md  SESSION_NOTES.md  SomaBrain.md
somabrain/health/: __init__.py  helpers.py  watchdog.py
somabrain/infrastructure/: __init__.py  cb_registry.py  circuit_breaker.py  degradation.py  tenant.py
somabrain/integrator/: consistency.py  leader_metrics.py
somabrain/interfaces/: __init__.py  memory.py
somabrain/jobs/: milvus_reconciliation.py
somabrain/journal/: __init__.py  local_journal.py
somabrain/learning/: __init__.py  adaptation.py  annealing.py  config.py  dataset.py  persistence.py  rust_engine.py  tenant_cache.py
somabrain/libs/: __init__.py
somabrain/lifecycle/: __init__.py  startup.py  watchdog.py
somabrain/math/: __init__.py  appr.py  bhdc_encoder.py  bridge.py  fd_rho.py  graph_heat.py  lanczos_chebyshev.py  learned_roles.py  mask_composer.py  normalize.py  similarity.py  sinkhorn.py
somabrain/memory/: __init__.py  agent.py  backends.py  client.py  direct_backend.py  filtering.py  graph_client.py  graph_metrics.py  health.py  hierarchical.py  hit_processing.py  http_helpers.py  hybrid.py  milvus_client.py  normalization.py  payload.py  pool.py  promotion.py  recall_ops.py  remember.py  remember_bulk.py  scoring.py  serialization.py  superposed_trace.py  transport.py  types.py  utils.py  wm_persistence.py
somabrain/memory_client_helpers/: __init__.py  types.py  utils.py
somabrain/memory_stub/: __init__.py  app.py
somabrain/metrics/: __init__.py  advanced_math_metrics.py  consolidation.py  constitution.py  context_metrics.py  core.py  embedding.py  executive.py  hrr.py  integration.py  interface.py  learning.py  math_metrics.py  memory_metrics.py  middleware.py  neuromodulator.py  novelty.py  oak.py  opa.py  outbox_metrics.py  planning.py  predictor.py  recall_quality.py  salience.py  segmentation.py
somabrain/metrics_extra/: __init__.py  advanced_math_metrics.py  context_metrics.py  math_metrics.py
somabrain/middleware/: __init__.py  cognitive.py  error_handler.py  security.py  validation.py  validation_handler.py
somafractalmemory/: pyproject.toml
(+2147 files in other folders)
