[package]
name = "somabrain_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "somabrain_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.0", features = ["extension-module"] }
ndarray = "0.15"
ndarray-rand = "0.14"
rand = "0.8"
rand_distr = "0.4"
rand_pcg = "0.3"
sha2 = "0.10"
num-complex = "0.4"

[profile.release]
opt-level = 3
lto = true
