[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "somabrain"
version = "0.1.0"
description = "SomaBrain — cognitive layer with WM, salience, HRR, planner, controls, and observability"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "SomaBrain Contributors" }]
keywords = ["agents", "cognition", "HRR", "FastAPI", "memory", "observability"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Framework :: FastAPI",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "fastapi>=0.103",
  "uvicorn>=0.22",
  "numpy>=1.24",
  "prometheus-client>=0.17",
  "httpx>=0.24",
  "somafractalmemory>=0.2.0",
]

[project.optional-dependencies]
controls = ["cryptography>=41"]
dev = ["pytest>=7", "ruff>=0.5", "mypy>=1.5"]

[project.scripts]
somabrain-api = "somabrain.cli:run_api"
somabrain-sleep = "somabrain.consolidation:main"

[tool.setuptools]
packages = { find = { where = ["."], include = ["somabrain*"], exclude = ["tests*"] } }
